Fix bottom of mobile site getting cut off in Webkit browsers

--- a/theme/rdnshiny/css/mp-screen.css
+++ b/theme/rdnshiny/css/mp-screen.css
@@ -11,7 +11,6 @@ min-width:0;
 max-width:100%;
 width: auto !important;
 box-shadow:none;
-overflow: hidden;
 }
 
 #header {
